--- a/gb/23/12/4/n14129201.md
+++ b/gb/23/12/4/n14129201.md
@@ -34,12 +34,12 @@
 <p>程翔指，APEC峰会期间的“习拜会”的笑面背后，“要很小心，在他的笑面背后，（看出）他的阴险谋略如何”。但是程翔觉得可惜之处，是有意见认为，中美之后会重启友好关系，“我觉得这个想法，是基于对中共的不认识，才会有这种错误的解读”。</p>
 <p>责任编辑：陈玟绮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/18/n13887104.md#1">港府建关爱队架空区议会 程翔：中共式监控系统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/1/n13920051.md#1">程翔：中国人口减少与专制政权有关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/2/n14065751.md#1">程翔：认识中共的隐蔽战线（1）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/6/n14067921.md#1">程翔：认识中共隐蔽战线（2）渗透香港和美国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11242732.md#1" target="_blank">【征文】张东园：孔子为什么不是无神论？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/29/n11829466.md#1" target="_blank">刘博：别让切尔诺贝利重演</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/22/n10581299.md#1" target="_blank">绝路逢生  台湾女子找到心灵的蓝天</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
